# pyProBound

./: .gitignore  README.md  pyProBound.py  pyproject.toml  scoring_withfile.py  setup.py  testscript_jnius.py
pyProBound/: database.py  scoring.py
pyProBound/test_input/: test_motifcentral_database.ipynb  test_pyprobound.ipynb
test_input/: fit.sox2.json  test_pyprobound_scoring.ipynb
